@@ -24,7 +24,7 @@
 ./Mono.Cecil/CustomAttribute.cs
 ./Mono.Cecil/CustomAttributeCollection.cs
 ./Mono.Cecil/DefaultAssemblyResolver.cs
-./Mono.Cecil/DefaultReferenceImporter.cs
+./Mono.Cecil/DefaultImporter.cs
 ./Mono.Cecil/EmbeddedResource.cs
 ./Mono.Cecil/EventAttributes.cs
 ./Mono.Cecil/EventDefinition.cs
@@ -54,6 +54,7 @@
 ./Mono.Cecil/IHasConstant.cs
 ./Mono.Cecil/IHasMarshalSpec.cs
 ./Mono.Cecil/IHasSecurity.cs
+./Mono.Cecil/IImporter.cs
 ./Mono.Cecil/IMemberDefinition.cs
 ./Mono.Cecil/IMemberReference.cs
 ./Mono.Cecil/IMetadataScope.cs
@@ -61,7 +62,6 @@
 ./Mono.Cecil/IMethodSignature.cs
 ./Mono.Cecil/ImportContext.cs
 ./Mono.Cecil/InterfaceCollection.cs
-./Mono.Cecil/IReferenceImporter.cs
 ./Mono.Cecil/IReflectionStructureVisitable.cs
 ./Mono.Cecil/IReflectionStructureVisitor.cs
 ./Mono.Cecil/IReflectionVisitable.cs
